sorted the issue with white space on header and footer

--- a/css/style.css
+++ b/css/style.css
@@ -117,9 +117,6 @@ and added my own logo*/
     font-size: 0.5em;
     text-decoration-color: #607D8B;
     list-style: none;
-    margin: 0;
-    width: 100%;
-  	height: 100%;
     /* = 10.5 pixels */
 }
 
